# Game-Engine

./: .gitignore  CMakeLists.txt  build_run.py  conanfile.py
App/: CMakeLists.txt  DemoTriangleLayer.cpp  DemoTriangleLayer.h  main.cpp
Engine/: CMakeLists.txt
Engine/include/Core/: Assert.h  Base.h  BuildAndPlatformDetection.h  Log.h  Utility.h
Engine/include/Engine_Private/Platform/SDL3/: SDL3Window.h
Engine/include/Engine_Public/Assets/Material/: MaterialDesc.h  MaterialDescBuilder.h  MaterialManager.h  MaterialPresets.h  MaterialRenderPolicy.h
Engine/include/Engine_Public/Assets/Mesh/: MeshDesc.h  MeshManager.h
Engine/include/Engine_Public/Assets/Shader/: Shader.h  ShaderDesc.h  ShaderManager.h
Engine/include/Engine_Public/Assets/Shader/ShaderSource/: unlit_triangle.frag  unlit_triangle.vert
Engine/include/Engine_Public/Assets/Texture/: TextureDesc.h  TextureManager.h
Engine/include/Engine_Public/Core/: Application.h  Assert.h  Base.h  BuildAndPlatformDetection.h  EntryPoint.h  Export.hpp  HandlePool.h  Hash.h  Layer.h  LayerStack.h  Log.h  Time.h  Timer.h  Timestep.h  Utility.h
Engine/include/Engine_Public/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/Engine_Public/Input/: Codes.h  Input.h  InputBackend.h
Engine/include/Engine_Public/Math/: Math.h
Engine/include/Engine_Public/Primitives/: PrimitiveCache.h  PrimitiveGen.h  PrimitiveKeys.h  PrimitiveMesh.h  PrimitiveTraits.h  PrimitiveUtils.h
Engine/include/Engine_Public/Renderer/: Buffer.h  BufferLayout.h  CommandQueue.h  FramebufferManager.h  IndexBuffer.h  PassGlobalsBinderRef.h  RenderTarget.h  Renderer.h  VertexArray.h  VertexBuffer.h
Engine/include/Engine_Public/Windows/: Window.h
Engine/include/Windows/: Window.h
Engine/src/Assets/Material/: CMakeLists.txt  MaterialManager.cpp
Engine/src/Assets/Mesh/: CMakeLists.txt  MeshManager.cpp
Engine/src/Assets/Shader/: CMakeLists.txt  Shader.cpp  ShaderManager.cpp
Engine/src/Assets/Textures/: CMakeLists.txt  TextureManager.cpp
Engine/src/Core/: Application.cpp  CMakeLists.txt  KeyCodes.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
Engine/src/Input/: CMakeLists.txt  Input.cpp
Engine/src/Platform/SDL3/: CMakeLists.txt  SDL3InputBackend.cpp  SDL3Time.cpp  SDL3Window.cpp
Engine/src/Primitives/: CMakeLists.txt  PrimitiveGen.cpp
Engine/src/Renderer/: Buffer.cpp  CMakeLists.txt  FramebufferManager.cpp  IndexBuffer.cpp  Renderer.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Windows/: CMakeLists.txt  Window.cpp
cmake/: Options.cmake
